Add personal github link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="link-area">
                 <div class="link">
                     <img src="github-sign.png" alt="github logo">
-                    <p class="link-text"><a href="">Github</a></p>
+                    <p class="link-text"><a href="https://github.com/Kwadwo-Firempong-Boakye/Project-Library">Github</a></p>
                 </div>
 
                 <div class="login">
