--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="login">
-                    <button class="link-text link-button">Login</button>
+                    <button class="link-button"><a href="">Login</a></button>
                 </div>
             </div>
         </header>
