--- a/index.html
+++ b/index.html
@@ -19,14 +19,20 @@
             </div>
 
             <div class="link-area">
+
                 <div class="link">
                     <img src="github-sign.png" alt="github logo">
                     <p class="link-text"><a href="https://github.com/Kwadwo-Firempong-Boakye/Project-Library">Github</a></p>
                 </div>
 
+                <div class="link">
+                    <img src="moon.png" alt="github logo" class="dark-mode-symbol">
+                </div>
+
                 <div class="login">
                     <button class="link-button"><a href="">Login</a></button>
                 </div>
+
             </div>
         </header>
 
