Improve header responsiveness & Add Book area

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <div class="logo-area">
                 <img src="icons8-literature.gif" alt="animated-book-stack">
-                <p class="logo-text">My Mini Library</p>
+                <p class="logo-text">Book Library</p>
             </div>
 
             <div class="link-area">
@@ -25,18 +25,40 @@
                     <p class="link-text"><a href="https://github.com/Kwadwo-Firempong-Boakye/Project-Library">Github</a></p>
                 </div>
 
-                <div class="link">
-                    <img src="moon.png" alt="github logo" class="dark-mode-symbol">
+                <div class="add-book">
+                    <button class="link-button add-book-button"><a href="">Add Book</a></button>
                 </div>
 
                 <div class="login">
                     <button class="link-button"><a href="">Login</a></button>
                 </div>
 
+                <div class="link">
+                    <img src="moon.png" alt="github logo" class="dark-mode-symbol">
+                </div>
+
             </div>
         </header>
 
-        <main></main>
+        <main>
+            <div class="card-container">
+                <div class="card">
+                    <img src="" alt="" class="media-image">
+                </div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+
+            </div>
+        </main>
 
         <footer></footer>
     </div>
