Add input type url for collecting book cover image

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <div class="popup-inputs">
                 <input type="text" id="user-book-title" placeholder="Title" required>
                 <input type="text" id="user-book-author" placeholder="Author" required>
+                <input type="url" id="user-book-url" placeholder="Cover Image Link">
                 <input type="number" id="user-book-pages" placeholder="Pages" required>
             </div>
             <div class="user-read-state">
