Create template for filling DOM with new cards

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <button class="link-button"><a href="">Login</a></button>
                 </div>
 
-                <div class="link">
-                    <img src="moon.png" alt="github logo" class="dark-mode-symbol">
+                <div class="dmode">
+                    <img src="moon.png" alt="dark mode logo" class="dark-mode-symbol">
                 </div>
 
             </div>
@@ -50,26 +50,7 @@
                     <img class="media-image" src="anomaly-oRskqiH7FNc-unsplash.jpg" alt="">
                     
                     <div class="details">
-                        <p class="book-name"><span>Title</span><br>Harry Potter and the Half Blood Shoe maker granny</p>
-                        <hr>
-                        <p class="author"><span>Author:   </span>J.K Rowling</p>
-                        <hr>
-                        <p class="pages"><span>Pages:   </span>200</p>
-                    </div>
-
-                    <div class="card-buttons">
-                        <button class="read-state">read</button>
-                        <svg class="delete" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor"  d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" /></svg>
-                    </div>
-
-                </div>
-
-                <div class="card">
-
-                    <img class="media-image" src="anomaly-oRskqiH7FNc-unsplash.jpg" alt="">
-                    
-                    <div class="details">
-                        <p class="book-name"><span>Title</span><br>Harry Potter and the Half Blood Shoe maker granny</p>
+                        <p class="book-name"><span>Title</span><br>Har Potter and the Half Blood Shoe maker granny</p>
                         <hr>
                         <p class="author"><span>Author:   </span>J.K Rowling</p>
                         <hr>
