ensure links open in new tab & add alert for login

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
             <div class="link-area">
 
-                <div class="link">
-                    <img src="github-sign.png" alt="github logo">
-                    <p class="link-text"><a href="https://github.com/Kwadwo-Firempong-Boakye/Project-Library">Github</a></p>
+                <div class="link github-logo">
+                    <a href="https://github.com/Kwadwo-Firempong-Boakye/Project-Library" target="_blank"><img src="github-sign.png" alt="github logo"></a>
+                    <p class="link-text"><a href="https://github.com/Kwadwo-Firempong-Boakye/Project-Library" target="_blank">Github</a></p>
                 </div>
 
                 <div class="add-book">
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="login">
-                    <button class="link-button"><a href="">Login</a></button>
+                    <button onclick="alert('This feature is in development and coming soon')" class="link-button"><a href="">Login</a></button>
                 </div>
 
                 <div class="dmode">
